Fix the alignment on the expression editor.

--- a/records/app/src/main/scss/expression-editor.scss
+++ b/records/app/src/main/scss/expression-editor.scss
@@ -12,7 +12,7 @@ $default-color: rgb(250, 250, 250);
     -fx-font-family: $font-main;
     -fx-font-size: 12pt;
 
-    -fx-alignment: bottom-left;
+    -fx-alignment: top-left;
     -fx-row-valignment: bottom;
     -fx-vgap: 1px;
     -fx-cursor: text;
